# sirocco-weather

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  location.yaml  location.yaml.example  main.py  pyproject.toml  test_main.py
.beads/: .beads-credential-key  metadata.json
.github/workflows/: ci.yml  deploy.yml
.tickets/: Wea-0nu2.md  Wea-0nu5.md  Wea-0rid.md  Wea-17i2.md  Wea-1a0b.md  Wea-1g85.md  Wea-35hh.md  Wea-3r1h.md  Wea-4a6b.md  Wea-6a6c.md  Wea-6jnh.md  Wea-8c00.md  Wea-9m90.md  Wea-9pd3.md  Wea-9ucn.md  Wea-9yc3.md  Wea-a4pb.md  Wea-a577.md  Wea-bt93.md  Wea-c8b2.md  Wea-chcm.md  Wea-dagm.md  Wea-dcbb.md  Wea-dcdb.md  Wea-er5l.md  Wea-f99y.md  Wea-g08o.md  Wea-hemn.md  Wea-hui5.md  Wea-hx14.md  Wea-ivye.md  Wea-jhvj.md  Wea-kj2y.md  Wea-kq28.md  Wea-lv3z.md  Wea-m0zj.md  Wea-mrsv.md  Wea-n1os.md  Wea-n2kl.md  Wea-o397.md  (+19 more)
scripts/: migrate_beads.py
src/sirocco/: api.py  cli.py  config.py  render.py
src/sirocco/templates/: forecast.html
tests/: test_api.py  test_cli.py  test_render.py
