[project]
name = "weather"
version = "0.1.0"
description = "Fetches and displays a 7-day weather forecast as a styled HTML page"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
]

[tool.pytest.ini_options]
addopts = "--cov=main --cov-report=term"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
