[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sirocco-weather"
version = "0.1.0"
description = "A lot of hot air — fetches and displays a weather forecast as a styled HTML page"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
]

[project.scripts]
sirocco = "sirocco.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sirocco"]

[tool.pytest.ini_options]
addopts = "--cov=sirocco --cov-report=term"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
