[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sirocco-weather"
version = "0.1.0"
description = "A lot of hot air — fetches and displays a weather forecast as a styled HTML page"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
]

[project.scripts]
sirocco = "sirocco.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sirocco"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",  # line too long — HTML-generating f-strings are inherently long
    "E701",  # compact if/else on one line is intentional in colour lookup tables
]

[tool.pytest.ini_options]
addopts = "--cov=sirocco --cov-report=term"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]
